# soundcloud2mp4

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.example.json
src/: lib.rs  main.rs  pipeline.rs  setup.rs
src/config/: settings.rs
src/downloader/: cookies.rs  metadata.rs  mod.rs  ytdlp.rs
src/gui/: app.rs  components.rs
src/models/: cache.rs  messages.rs  mod.rs  track.rs
src/utils/: filesystem.rs  process.rs
src/video/: checkpoint.rs  concat.rs  encoder.rs  ffmpeg.rs  mod.rs  probe.rs  renderer.rs
tests/: combined_workflow.rs  e2e_workflow.rs  large_combine.rs  metadata_retry.rs  setup_assistant.rs
tests/fixtures/: soundcloud_flat_playlist.json  soundcloud_track.json
