[package]
name = "soundcloud2mp4"
version = "0.1.0"
edition = "2021"
description = "SoundCloud Playlist to MP4 Music Video Converter"
license = "MIT"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "gif",
    "bmp",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dirs = "5"
rfd = "0.15"
open = "5"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
